kinda fix overflow

--- a/frontend/themes/fivemstats/main-layout.css
+++ b/frontend/themes/fivemstats/main-layout.css
@@ -14,3 +14,7 @@ vaadin-scroller[slot="drawer"] {
 [slot="drawer"]:is(header, footer):is(:empty) {
   display: none;
 }
+
+#appLayout {
+  overflow: hidden !important;
+}
